<resources>
    <string name="app_name">HoraDaPapaApp</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="btn_login">Login</string>
    <string name="btn_AppConfig">App Settings</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="navMeal">Meal</string>
    <string name="navFavourites">Favourites</string>
    <string name="navInvoice">Invoices</string>
    <string name="menu_reach_out">Reach out!</string>
    <string name="navEmail">Email</string>
    <string name="navigation_drawer_open">Open Drawer\n</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvTitle">Title</string>
    <string name="tvDescription">Description</string>
    <string name="tvPrice">Price</string>
    <string name="btnAdd">ADD(1)</string>
    <string name="textPassword">Password\n</string>
    <string name="txtEmail">Email</string>
    <string name="txtName">Name</string>
    <string name="txtSurname">Surname</string>
    <string name="txtNIF">NIF</string>
    <string name="Cart">Go to cart</string>
    <string name="Purchase">"Purchase "</string>
    <string name="invoiceTitle">Hora da Papa</string>
    <string name="invoice_meal_id">meal_id</string>
    <string name="invoicePrice">Price</string>
    <string name="invoiceDate">Date</string>
    <string name="invoiceDetailsButton">See details</string>
    <string name="txt_Search">Search</string>
    <string name="txt_Table">Table</string>
    <string name="btn_StartMeal">Start Meal</string>
    <string name="txt_table_name">Hora da Papa</string>
    <string name="txt_table">Choose your table!</string>
    <string name="txt_StartMeal">Start Meal</string>
    <string name="tv_StartMeal">Start Meal</string>
    <string name="btt_StartMeal">Start Meal</string>
    <string name="tvReview_ID">ID</string>
    <string name="tvReviewDesc">Description</string>
    <string name="tvReviewValue">Value</string>
    <string name="itxtInvoiceMealID">Meal ID</string>
    <string name="txtInvoiceID">Invoice ID</string>
    <string name="txtIID">Invoice ID:</string>
    <string name="txtIMID">Meal ID</string>
    <string name="txtTIP">"Price: "</string>
    <string name="txtInvoiceeID">"Invoice ID: "</string>
    <string name="navTickets">Tickets</string>
</resources>