<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <item
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/navMeal"
            android:icon="@drawable/ic_meal"
            android:id="@+id/navMeal"/>
        <item
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/navFavourites"
            android:icon="@drawable/ic_favourite_empty"/>
        <item
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/navInvoice"
            android:icon="@drawable/ic_invoice"/>
    </group>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_reach_out">
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <item
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/navEmail"
                android:icon="@drawable/ic_email"/>
        </menu>
    </item>
</menu>