<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/view9"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_StartMeal"
            android:textStyle="bold" />

        <View
            android:id="@+id/view7"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_table"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_SelectTable"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dropdown" />

        <View
            android:id="@+id/view11"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btn_StartMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btt_StartMeal" />


    </LinearLayout>

</FrameLayout>